Updated frontend for testing
[Ready for test]
[UNTESTED]

--- a/static/index.html
+++ b/static/index.html
@@ -38,55 +38,29 @@
     <div id="output"></div>
 
     <script>
-        const outputDiv = document.getElementById('output');
-        const promptInput = document.getElementById('prompt');
-        const generateBtn = document.getElementById('generate-btn');
+        const outputDiv = document.getElementById("output");
+        const promptInput = document.getElementById("prompt");
+        const generateBtn = document.getElementById("generate-btn");
+        let socket = new WebSocket("ws://localhost:8001/");
 
-        // Function to send the prompt to the server
-        async function generateTokens() {
+        socket.onmessage = function(event) {
+            const tokens = JSON.parse(event.data).tokens;
+            if (tokens.length > 0) {
+                outputDiv.innerHTML += tokens.join('') ;
+                outputDiv.scrollTop = outputDiv.scrollHeight;
+            }
+        };
+
+        function generateTokens() {
             const prompt = promptInput.value;
             if (!prompt) {
                 alert('Please enter a prompt.');
                 return;
             }
 
-            // Send a POST request to the /generate endpoint
-            const response = await fetch('/generate', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ prompt })
-            });
-
-            const data = await response.json();
-            if (!data.successful) {
-                alert('Failed to generate tokens. Please check the console for more details.');
-            } else {
-                outputDiv.innerHTML = ''; // Clear the output on new request
-                startListeningForUpdates(); // Start listening for updates
-            }
+            socket.send(JSON.stringify({ "prompt": prompt }));
         }
 
-        // Function to listen for updates from the server
-        function startListeningForUpdates() {
-            const eventSource = new EventSource('/updates');
-
-            eventSource.onmessage = function(event) {
-                const tokens = JSON.parse(event.data).tokens;
-                if (tokens.length > 0) {
-                    outputDiv.innerHTML += tokens.join(' ') + ' '; // Append new tokens
-                    outputDiv.scrollTop = outputDiv.scrollHeight; // Scroll to bottom
-                }
-            };
-
-            eventSource.onerror = function() {
-                console.error('EventSource failed.');
-                eventSource.close(); // Close the connection on error
-            };
-        }
-
-        // Attach the click event to the button
         generateBtn.addEventListener('click', generateTokens);
     </script>
 </body>
